Lots of changes

--- a/etc/config.ini
+++ b/etc/config.ini
@@ -1,5 +1,27 @@
-; Define a database connection here
-[database]
+
+; ****************************************************
+; DATABASES
+; ****************************************************
+
+; Define a database profile.  For a database profile, you must
+; supply the type=db
+[database_profile]
+name=chado1
+type=db
+host=localhost
+user=randalls
+pass=dofa7h
+database=chado
+schema=public
+port=5432
+
+; Define a second database profile.
+; Note the type is db.  This is how
+; we can have multiple database
+; profiles
+[any_name_can_go here]
+name=chado2
+type=db 
 host=localhost
 user=randalls
 pass=dofa7h
