Changed password for database

--- a/etc/config.ini
+++ b/etc/config.ini
@@ -10,7 +10,7 @@ name=chado1
 type=db
 host=localhost
 user=randalls
-pass=dofa7h
+pass=pass
 database=chado
 schema=public
 port=5432
@@ -24,7 +24,7 @@ name=chado2
 type=db 
 host=localhost
 user=randalls
-pass=dofa7h
+pass=pass
 database=chado
 schema=public
 port=5432
