--- a/etc/config.ini
+++ b/etc/config.ini
@@ -14,6 +14,7 @@ pass=pass
 database=chado
 schema=public
 port=5432
+prefix=pgsql
 
 ; Define a second database profile.
 ; Note the type is db.  This is how
@@ -28,6 +29,7 @@ pass=pass
 database=chado
 schema=public
 port=5432
+prefix=pgsql 
 
 
 
